# gamlss

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: gas_like.rs  simple_fit.rs
gamlss-core/: Cargo.toml  README.md
gamlss-core/src/: design.rs  error.rs  family.rs  lib.rs  link.rs  model.rs  objective.rs  param.rs  penalty.rs  predictor.rs
gamlss-family/: Cargo.toml  README.md
gamlss-family/src/: beta.rs  gamma.rs  inverse_gaussian.rs  laplace.rs  lib.rs  log_normal.rs  normal.rs  special.rs  student_t.rs  weibull.rs
gamlss-formula/: Cargo.toml  README.md
gamlss-formula/src/: lib.rs
gamlss-spline/: Cargo.toml  README.md
gamlss-spline/src/: lib.rs
src/: lib.rs
