[workspace]
members = [
    "gamlss-core",
    "gamlss-family",
    "gamlss-spline",
    "gamlss-formula",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Type-driven Rust crates for GAMLSS modeling"
license = "MIT OR Apache-2.0"
authors = ["hexqnt <hexqntlab@gmail.com>"]
repository = "https://github.com/hexqnt/gamlss"
documentation = "https://docs.rs/gamlss"
readme = "README.md"
keywords = ["gamlss"]
categories = ["algorithms", "mathematics", "science"]

[workspace.dependencies]
approx = "0.5.1"
gamlss-core = { path = "gamlss-core", version = "0.1.0" }
gamlss-family = { path = "gamlss-family", version = "0.1.0" }
gamlss-formula = { path = "gamlss-formula", version = "0.1.0" }
gamlss-spline = { path = "gamlss-spline", version = "0.1.0" }
thiserror = "2.0.18"

[package]
name = "gamlss"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "examples/**/*", "Cargo.toml", "README.md", "LICENSE*"]

[features]
default = ["formula"]
formula = ["dep:gamlss-formula"]

[dependencies]
gamlss-core.workspace = true
gamlss-family.workspace = true
gamlss-formula = { workspace = true, optional = true }
gamlss-spline.workspace = true

[dev-dependencies]
approx.workspace = true
argmin = "0.11.0"
argmin-math = { version = "0.5.1", features = ["vec"] }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
