[package]
name = "gamlss-core"
version.workspace = true
edition.workspace = true
description = "Core type-driven abstractions for GAMLSS modeling"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gamlss-core"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
